--- a/Views/Shared/_Layout_Consumer.cshtml
+++ b/Views/Shared/_Layout_Consumer.cshtml
@@ -63,6 +63,9 @@
                 <a href="/Consumer/Bills"><i class="bi bi-receipt"></i> My Bills</a>
                 <a href="/Consumer/Tariffs"><i class="bi bi-cash-stack"></i> Tariff</a>
                 <a href="/Consumer/TariffSlabs"><i class="bi bi-columns-gap"></i> Tariff Slabs</a>
+                <a href="/Consumer/Readings">
+                    <i class="bi bi-speedometer2"></i> Readings
+                </a>
             </nav>
 
             <!-- Main Content -->
